<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_16"
    tools:context=".activities.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        app:srcCompat="@drawable/backarrow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/txt_register"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/txt_register_with_mobile_number"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_15" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/bg_gray_round"
            android:padding="@dimen/dp_8">

            <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:gravity="center"
                app:ccp_defaultNameCode="US"
                app:ccp_textColor="@color/gray" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ccp"
                android:backgroundTint="@color/white"
                android:hint="Enter number"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15"
                app:hintTextColor="@color/gray"></com.google.android.material.textfield.TextInputEditText>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_30"
            android:paddingStart="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_8"
            android:text="@string/by_continuing_you_may_receive_an_sms_for_verification_message_and_data_rate_may_apply"
            android:textColor="@color/gray"
            android:textSize="@dimen/sp_15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/login_btn_bg"
                android:onClick="clickNext"
                android:text="@string/txt_verify_number"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_15"
                android:theme="@style/btn" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/txt_or_connect_using_social_media"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp_15" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_50"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_16"
                android:background="#4582FF"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="1dp"
                android:paddingTop="1dp"
                android:paddingEnd="@dimen/dp_8"
                android:paddingBottom="1dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_white">

                    <ImageView
                        android:layout_width="@dimen/dp_40"
                        android:layout_height="@dimen/dp_40"
                        android:src="@drawable/google" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/dp_8"
                    android:text="@string/txt_register_with_google"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_15" />


            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/txt_we_will_redirect_you_to_our_third_party_partner_pages_for_social_media_login"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp_15" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_30"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/txt_already_have_an_account"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="onClickRegister"
                    android:text="@string/txt_login"
                    android:textColor="@color/redbtn"
                    android:textSize="@dimen/sp_15" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>