<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_16"
    tools:context=".activities.LoginActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        app:srcCompat="@drawable/backarrow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/txt_what_s_your_name"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/txt_drivers_will_confirm_it_s_you_when_they_pull_up"
            android:textColor="@color/textGrey"
            android:textSize="@dimen/sp_15" />

        <LinearLayout
            android:layout_marginTop="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30" />

            <EditText
                android:id="@+id/edtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:textColorHint="@color/gray"
                android:textColor="@color/defaultTextColor"
                android:hint="First Name" />

            <EditText
                android:id="@+id/edtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:textColorHint="@color/gray"
                android:textColor="@color/defaultTextColor"
                android:hint="Last Name" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="visible" />

        <LinearLayout
            android:layout_marginBottom="@dimen/dp_30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/login_btn_bg"
                android:onClick="clickNext"
                android:text="@string/txt_next"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_15"
                android:theme="@style/btn" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>